# qt-client-server

./: CMakeLists.txt  README.MD  message.h
.github/workflows/: build-linux.yml  build-windows.yml  release.yml
client/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
